@@ -1,4 +1,4 @@
-DIST uthash-1.7.tar.bz2 294626 RMD160 d13543b7de6e360d7f51d0d4e7804be4e1c90afe SHA1 5a4c45615736a2699b4723f5428add3f4d4d30fb SHA256 a870b0743a17ce3937ab3f98cc50027f7f8b522aa3e4b2e2f458eb17284f4788
-EBUILD uthash-1.7.ebuild 722 RMD160 d8a39b90b2f00737b023d8883131b71cb54d542b SHA1 6839764a1fb3d0e204111650530635c997da1d0b SHA256 f098e5fd55e4acf58112c77c6fbc66b8877ecf337a9a40d314cfc2f45d6e9c94
-MISC ChangeLog 1822 RMD160 c5a1ac4f090ab86f0f9f33e0e23c0cb85185f710 SHA1 34257d3253055e3b38583adc68da4a2011221af0 SHA256 451b5779f87576a31ac9770fd9b74b686210c1c38df99e6dc43500c430bf28d0
+DIST uthash-1.9.1.tar.bz2 273332 RMD160 01414f30a1535d5a5c195d5bd90ebdc8739d21fb SHA1 d24f8ef4d3d677f7d7e89fc479b635704bf953b7 SHA256 b700d6dbd0dd833fcf22e23999b992d3d9a8d947df4db4c38c91ab48ab6e5ac9
+EBUILD uthash-1.9.1.ebuild 712 RMD160 1fdbb13e308efe548938f0d72ffe73c3081cd8b6 SHA1 5aadb95dcafe4999ab177eeff85b639851fd84df SHA256 492ce586a9cf46ab32d684075f45e5e41ca2fa81398fe201ff8cb7795c2fb7c7
+MISC ChangeLog 1969 RMD160 31c07d89ff7680a66386e26e21ef9de236aa3df0 SHA1 4cfeaa98e04fcc5418e22f2674b519e75ca00f86 SHA256 87229fdd315ab65771dee8b9c56c9703c144e0444da924ea6b956f7eb043b273
 MISC metadata.xml 229 RMD160 f0f6417bec31ce8baba6d476664f7210c8c84c98 SHA1 e5f94f5caadc6f843fc90bb7959570cd503676fd SHA256 3b08fca3c878bdfc4e7639f477dd542d55a4ab5dce39a475e82633071d13eb3f
