@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/uthash
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  07 Jun 2010; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
+  -uthash-1.7.ebuild, +uthash-1.9.1.ebuild:
+  Version bump. Review by hwoarang
 
   12 Jul 2009; Tiago Cunha <tcunha@gentoo.org> -uthash-1.6.ebuild,
   +uthash-1.7.ebuild:
